# dual-arm-manipulation

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  rtde_publisher.script  z.log.global
calibration/: 138322253845_20251208_112641_homogenous_transform.npy  138322253845_20251208_143409_homogenous_transform.npy  138322253845_20251208_164811_homogenous_transform.npy
control/: dual_arm_controller.py  impedance_qp_controller.py  impedance_qp_right.py  pid_controller.py  pid_ff_controller.py  test.py  test_PID_control.py  test_control.py  test_force_control.py  test_pid_control.py  ur5_control.py  ur_controller.py  ur_ff_controller.py  ur_force_controller.py  ur_pid_controller.py
control/PID/: pid_controller.py  pid_ff_controller.py
control/QP/: impedance_qp.py  impedance_qp_right.py  qp.py  qp_admittance.py  qp_admittance_base.py  qp_admittance_proper.py  qp_admittance_proper_vel.py  qp_full.py  qp_full_basic.py  qp_grasp.py  qp_graspdot.py  qp_impedance.py  qp_impedance_single.py  qp_posture.py  test.py  tests.py
control/UR/: dual_arm_controller.py  ur_controller.py
experiments/PID/: angular.py  complex.py  linear.py  weight.py  (+1 more)
grasping/: grasping_points.py  test.py
motion_planner/: 8figure.py  angular.py  circle.py  linear.py  motion_planner.py  pick_and_place.py  twist.py
post_process/: post_process.py  test.py
scripts/: boxes.py
tests/: circle.py  grasp.py  lifting.py  pick_and_place.py  qp.py  qp_right.py  rectangular.py  side_y.py  twist.py
ur5/: UR5e.urdf  ur5e.urdf
utils/: utils.py
visualizer/: visualizer.py
(+400 files in other folders)
